SERVER-84541 Throw on setClusterParameter update errors (#17889)

SERVER-84541 Throw on setClusterParameter update errors

This change ensures the errors from the internal collection update on
'setClusterParameter' and dependant 'setQuerySettings' and
'removeQuerySettings' commands are not ignored.

Until now, these commands may fail in stepdown passthrough suites,
because the retriable error 'PrimarySteppedDown' causing the issues was
not surfacing.

GitOrigin-RevId: f2d504ad7e1726e789399013e9e6076a285fbfec