src/mongo/db/commands/set_cluster_parameter_invocation.h
@@ -61,18 +61,10 @@ public:
 
 class DBClientService {
 public:
-    virtual StatusWith<BatchedCommandResponse> updateParameterOnDisk(
-        OperationContext* opCtx,
-        BSONObj query,
-        BSONObj update,
-        bool upsert,
-        const WriteConcernOptions&,
-        const boost::optional<TenantId>&) = 0;
-    virtual StatusWith<BatchedCommandResponse> insertParameterOnDisk(
-        OperationContext* opCtx,
-        BSONObj update,
-        const WriteConcernOptions&,
-        const boost::optional<TenantId>&) = 0;
+    virtual BatchedCommandResponse updateParameterOnDisk(BSONObj query,
+                                                         BSONObj update,
+                                                         const WriteConcernOptions&,
+                                                         const boost::optional<TenantId>&) = 0;
     virtual Timestamp getUpdateClusterTime(OperationContext*) = 0;
     virtual ~DBClientService() = default;
 };
@@ -80,18 +72,10 @@ public:
 class ClusterParameterDBClientService final : public DBClientService {
 public:
     ClusterParameterDBClientService(DBDirectClient& dbDirectClient) : _dbClient(dbDirectClient) {}
-    StatusWith<BatchedCommandResponse> updateParameterOnDisk(
-        OperationContext* opCtx,
-        BSONObj query,
-        BSONObj update,
-        bool upsert,
-        const WriteConcernOptions&,
-        const boost::optional<TenantId>&) override;
-    StatusWith<BatchedCommandResponse> insertParameterOnDisk(
-        OperationContext* opCtx,
-        BSONObj update,
-        const WriteConcernOptions&,
-        const boost::optional<TenantId>&) override;
+    BatchedCommandResponse updateParameterOnDisk(BSONObj query,
+                                                 BSONObj update,
+                                                 const WriteConcernOptions&,
+                                                 const boost::optional<TenantId>&) override;
     Timestamp getUpdateClusterTime(OperationContext*) override;
 
 private:
